--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -12,6 +12,6 @@
     <item
         android:id="@+id/action_sign_out"
         android:orderInCategory="110"
-        android:title="@string/sign_out"
+        android:title="@string/logout"
         app:showAsAction="never"/>
 </menu>
